--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "embla-carousel": "^8.0.0-rc19",
     "embla-carousel-react": "^8.0.0-rc19",
+    "framer-motion": "^10.18.0",
     "graphql": "^16.8.1",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
